kubernetes/prometheus/components/compactor-ceph/compactor-job.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-compactor-ceph
  namespace: prometheus
  labels:
    app: thanos-compactor-ceph
    app.kubernetes.io/instance: prometheus
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  serviceName: thanos-compactor-ceph
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: thanos-compactor-ceph
  template:
    metadata:
      labels:
        app: thanos-compactor-ceph
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - name: thanos-compactor
          # renovate: datasource=docker depName=quay.io/thanos/thanos
          image: quay.io/thanos/thanos:v0.42.4@sha256:b567818fe608067eb0f1d7c2c4fe361e7ad83c8a256234c97685f1d0bf670cc8
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            seccompProfile:
              type: RuntimeDefault
            privileged: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 6Gi
          args:
            - compact
            - --objstore.config-file=/etc/secret/ceph.yaml
            - --data-dir=/data/thanos-compact
            - --delete-delay=24h
            - --compact.cleanup-interval=24h
            - --compact.enable-vertical-compaction
            - --compact.concurrency=8
            - --retention.resolution-raw=365d
            - --retention.resolution-5m=1095d
            - --retention.resolution-1h=0d
            - --log.level=info
            - --wait
          volumeMounts:
            - name: ceph
              mountPath: /etc/secret
              readOnly: true
            - name: data
              mountPath: /data
      volumes:
        - name: ceph
          secret:
            secretName: ceph
      enableServiceLinks: false
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
        storageClassName: rook-ceph-block-ci
